--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todo-list-app",
   "version": "0.1.0",
+  "homepage": "https://test.itemforwell.co.th/react/todo-list-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
